--- a/gb/20/12/8/n12603026.md
+++ b/gb/20/12/8/n12603026.md
@@ -1,14 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjdhch354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【西岸观察】捍卫美国 民兵组织吁川普效仿林肯</h2>
-<a href="https://git.io/JIR7O"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2bd0i85jg8bcc.cloudfront.net/G3mWEih6r"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>民兵组织吁川普效仿林肯总统宣布有限戒严令，在军方监督下重新举行大选，弗林支持；如果拜登就职，守誓者拒承认他是国家领导人并反抗到底；批加州州长太虚伪，县警长拒绝执行居家避疫令｜12月7日【西岸观察】（大纪元制图）
 </h6>
 <hr>
-	<p>【大纪元2020年12月08日讯】大家好！欢迎收看<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>，我是林骁然。在美国宪法之下，县警长可以公然对抗州长，民兵可以拿起武器反抗联邦。在深陷大瘟疫和大选舞弊泥沼的当下，这两种情形正在上演，反映出了美国社会所面临着的两个最棘手的问题的严重程度。</p>
-<h2>批加州州长太虚伪 县警长拒绝执行<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B1%85%E5%AE%B6%E9%81%BF%E7%96%AB%E4%BB%A4.md#1">居家避疫令</a></h2>
-<p>随着疫情再度升温，我们加州再次进入“封锁”（lockdown）状态。州长纽森（Gavin Newsom）上周四（12月3日）下令，只要医院的ICU床位低于15%，当地就要实行至少为期三周的<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B1%85%E5%AE%B6%E9%81%BF%E7%96%AB%E4%BB%A4.md#1">居家避疫令</a>（stay-at-home order），餐厅和发廊等等小商业必须停业，这令大半年收入锐减的小商家们苦不堪言。更令人气愤的是，政客们言行不一，嘴上说必须收紧防疫措施，私下里自己却是另一套作为。</p>
+	<p>【大纪元2020年12月08日讯】大家好！欢迎收看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A5%BF%E5%B2%B8%E8%A7%82%E5%AF%9F.md#1">西岸观察</a>，我是林骁然。在美国宪法之下，县警长可以公然对抗州长，民兵可以拿起武器反抗联邦。在深陷大瘟疫和大选舞弊泥沼的当下，这两种情形正在上演，反映出了美国社会所面临着的两个最棘手的问题的严重程度。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/8d784613-709f-49e4-b305-7c6fd9c81476" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<h2>批加州州长太虚伪 县警长拒绝执行<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B1%85%E5%AE%B6%E9%81%BF%E7%96%AB%E4%BB%A4.md#1">居家避疫令</a></h2>
+<p>随着疫情再度升温，我们加州再次进入“封锁”（lockdown）状态。州长纽森（Gavin Newsom）上周四（12月3日）下令，只要医院的ICU床位低于15%，当地就要实行至少为期三周的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B1%85%E5%AE%B6%E9%81%BF%E7%96%AB%E4%BB%A4.md#1">居家避疫令</a>（stay-at-home order），餐厅和发廊等等小商业必须停业，这令大半年收入锐减的小商家们苦不堪言。更令人气愤的是，政客们言行不一，嘴上说必须收紧防疫措施，私下里自己却是另一套作为。</p>
 <p>推特上点击量超过700多万的一则视频显示，一位洛杉矶的餐厅女老板面对镜头哭诉，她的餐厅的户外就餐被喊停了，而市长加西提（Eric Garcetti）却批准了一个电影公司的大型户外用餐区，就在她餐厅的停车场的对面，距离她的户外就餐区只有50英尺。女老板质问加西提和纽森，为什么她家的户外就餐被说成是危险的，而对面的就可以。她说，这就好像是搧了她一巴掌一样耻辱。</p>
 <p>因为疫情而被迫关门，女老板哭诉就因为政府的防疫政策，让她失去了所拥有的一切，政府没有补助，她和员工没办法活了。她说她受够了，加西提和纽森必须为此负责！</p>
 <p>洛杉矶县是加州最早实施新一轮居家避疫令的地区，上个月底洛县县政委员屈尔（Sheila Kuehl）被爆出，对户外用餐禁令投下赞成票后仅仅几个小时，却跑到自家附近一个意大利餐厅享用美食去了。屈尔在投票时说：“与其它行业相比，户外用餐可以说是最危险的，因为没戴口罩的顾客有传播病毒的风险。”</p>
@@ -21,10 +24,10 @@
 <p>比安科说，州长让我们逮捕违反居家令的人，给他们开罚单，关闭他们的店面，让他们待在家里，夺走他们的民权自由，不然的话州长就要惩罚我们所有人，让公众舆论来反对加州警察，“这是霸凌者的行为”！</p>
 <p>目前除了比安科所在的河滨县，南加州橙县（Orange County）警长巴恩斯（Don Barnes）也拒绝执行纽森的居家避疫令，他说：“遵守健康行政令是个人的责任，而不是执法的问题。警局将不会单独就口罩令、社交聚会或居家令等问题出警。”</p>
 <p>美国的县警长也是经过选举产生的民选官员，宪法赋予他们权力，从地方利益出发，而对抗来自州府和联邦的行政命令和法律。不但县警公开反对纽森，加州各地愤怒的餐厅业主和小商家们已经联合起来了，加入罢免纽森（Recall Newsom）的公投签名运动。力争到明年3月17号初选前，征集到150万选民签名，把他赶下台。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://git.io/JIR7O"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/vy2eh1ZtK_k?wmode=transparent&#038;wmode=opaque"allowfullscreen></a>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d2bd0i85jg8bcc.cloudfront.net/G3mWEih6r"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/vy2eh1ZtK_k?wmode=transparent&#038;wmode=opaque"allowfullscreen></a>
 	</div>
-<h2>民兵组织呼吁川普<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%95%88%E4%BB%BF%E6%9E%97%E8%82%AF.md#1">效仿林肯</a>戒严 重启大选</h2>
-<p>咱们再来说美国的民兵。上周，刚刚被川普总统特赦的弗林将军（General Michael Flynn）转发了一篇刊登在《华盛顿时报》（The Washington Times）上整版广告。名为“我们的人民公约”（We the People Convention）的民兵组织呼吁川普<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%95%88%E4%BB%BF%E6%9E%97%E8%82%AF.md#1">效仿林肯</a>总统1863年的做法，应该宣布“有限度的戒严令”，并且要求在军方的监督下重新举行总统大选。</p>
+<h2>民兵组织呼吁川普<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%95%88%E4%BB%BF%E6%9E%97%E8%82%AF.md#1">效仿林肯</a>戒严 重启大选</h2>
+<p>咱们再来说美国的民兵。上周，刚刚被川普总统特赦的弗林将军（General Michael Flynn）转发了一篇刊登在《华盛顿时报》（The Washington Times）上整版广告。名为“我们的人民公约”（We the People Convention）的民兵组织呼吁川普<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%95%88%E4%BB%BF%E6%9E%97%E8%82%AF.md#1">效仿林肯</a>总统1863年的做法，应该宣布“有限度的戒严令”，并且要求在军方的监督下重新举行总统大选。</p>
 <p>“我们的人民公约”呼吁说，鉴于美国的司法、立法部门难以维护大选的公正性，不能信任州长、州务卿、选举官员、地方议员，更不能信任律师和媒体，他们要求川普动用总统特权实行小规模军事管制，在军方监督下再来一次合法公民一人一票的真正的大选。</p>
 <p>“我们的人民公约”不是第一个公开拒绝承认拜登当选的民兵组织。此前，号称美国最大民兵组织的“守誓者”（Oath Keepers）就表示，如果拜登在明年一月宣誓就职，他们拒绝承认他是新的国家领导人，而且会效法美国开国元勋的精神，反抗到底！</p>
 <p>在美国，民兵的含义是每一个自由人都有权利和义务拿起武器，保卫国家的自由、法律和秩序。早在独立前，北美13州就建立了民兵武装，并在独立战争中联合起来击败了英军。独立之后，根据宪法，如果地方政府认为必要，志愿民兵组织仍可以保留。也就是说，美国在没有成立政府之前，已经有民兵了。现在全美的民兵组织有300多个，成员多达10万。他们热爱国家，支持小政府、少税收，认为联邦政府不能剥夺民众的自由权。一旦他们认为宪法赋予的权利受到侵害了，将拿起武器进行战斗。因为宪法修正案第二条明确指出：“一支得到有效控制的民兵对于一个自由州的安全是必要的，人们拥有和携带武器的权利不应受到侵犯。”</p>
@@ -42,42 +45,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/18/n12557542.md#1">参加派对违反防疫规定 州长纽森再度抱歉</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/18/n12559480.md#1">州长纽森参加宴会后致歉 被指仍在说谎</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/24/n12572907.md#1">防疫令滥权？ 加州“罢免纽森”声浪再起</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/30/n12584063.md#1">洛县官员：新居家令较宽松 要求民众防疫共识</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/18/n12557542.md#1">参加派对违反防疫规定 州长纽森再度抱歉</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/18/n12559480.md#1">州长纽森参加宴会后致歉 被指仍在说谎</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/24/n12572907.md#1">防疫令滥权？ 加州“罢免纽森”声浪再起</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/30/n12584063.md#1">洛县官员：新居家令较宽松 要求民众防疫共识</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/fjdhch354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979206.md#1" target="_blank">共产暴政录：“五一六”反革命阴谋集团案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12602741.md#1">【珍言真语】林建诚：有线台裁员 新闻自由不再</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12601669.md#1">【微视频】川普决心很重要 拆穿拜登“国王新衣”</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602463.md#1">【横河直播】翟东昇和美大选舞弊的中共因素</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599095.md#1">【大选更新12.6】白宫：全美存在统计异常</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599402.md#1">威州邮递员指证：邮局下令更改选票邮戳日期</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599572.md#1">鲍威尔转发翟东升视频：中共如何搞定拜登</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602498.md#1">孙俪成大陆考生人物素描题 美貌皆非网友笑翻</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599611.md#1">35岁徐佳莹幽默报喜：我刚刚生了一个孩子</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602271.md#1">游戏环节并列两岸旗帜 韩综《RM》辱华？</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600579.md#1">TWICE于MAMA获两奖 唱新歌登热搜与收视冠军</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/3/n12594410.md#1">忧郁症有4大症状 怎样改善？治疗和饮食全图解</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600868.md#1">史上首次 美太空人采收在外太空种植的萝卜</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600653.md#1">与妻子吵架想散心 义国男子竟走了450公里</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599786.md#1">大雪节气养生早睡晚起 3招保养心血管、增免疫</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12603026.htm">【西岸观察】捍卫美国 民兵组织吁川普效仿林肯</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12603026.htm">【西岸观察】捍卫美国 民兵组织吁川普效仿林肯</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12603026.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/12/8/n12603026.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
